style: improved global styles and component styles for more polished and user-friendly interface

--- a/src/components/abc/AbcCube.css
+++ b/src/components/abc/AbcCube.css
@@ -8,11 +8,15 @@
 }
 
 .swiper-slide.abc-slide {
-  background-color: rgb(2, 1, 23);
-  background-image: url(../../assets/images/abc-cover.jpg);
+  background-color: rgb(199, 116, 0);
+  background-image: url(../../assets/images/wooden-bigboard.png);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
+  border: 1px solid rgba(48, 1, 1, 0.3);
+  user-select: none;
+  border-radius: 0.5rem;
+  box-shadow: inset 1px 1px 5px rgb(239, 206, 192), inset 1px 1px 5px rgb(188, 85, 1);
 }
 
 .swiper-cube {
