--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -2,6 +2,7 @@
   position: relative;
   width: 100%;
   height: 25rem;
+  border-radius: 1.25rem;
 }
 
 @media screen and (min-width: 48rem) {
@@ -9,6 +10,7 @@
     width: 100%;
     max-width: 43.625rem;
     height: 50vh;
+    border-radius: 1.25rem;
   }
 }
 
@@ -34,7 +36,7 @@
   );
 }
 
-.gradient-overlay {
+.gradient-bottom-overlay {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -54,13 +56,29 @@
     rgba(5, 13, 0, 0.25) 90%,
     rgba(5, 13, 0, 0) 100%
   );
-  backdrop-filter: blur(2.25rem);
-  -webkit-backdrop-filter: blur(2.25rem);
   color: #fff;
-  border-radius: 0 0 1.25rem 1.25rem;
+  border-radius: 1.25rem;
+}
+
+.gradient-top-overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 15rem;
+  background: linear-gradient(
+    to bottom,
+    rgba(5, 13, 0, 1) 0%,
+    rgba(5, 13, 0, 0.75) 20%,
+    rgba(5, 13, 0, 0.5) 40%,
+    rgba(5, 13, 0, 0.25) 60%,
+    rgba(5, 13, 0, 0) 100%
+  );
+  border-radius: 1.25rem;
 }
 
 .swiper.swiper-cube {
   min-width: unset;
   overflow: hidden;
+  border-radius: 1.25rem;
 }
