--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -39,6 +39,15 @@ ion-content {
   scrollbar-width: none; /* Hide scrollbar in Firefox */
   -ms-overflow-style: none; /* Hide scrollbar in IE and Edge */
   -webkit-overflow-scrolling: touch; /* Enable smooth scrolling on touch devices */
+  --background: transparent;
+}
+
+ion-title.custom {
+  letter-spacing: 0.25em;
+}
+
+.main-title {
+ background: url(../assets/images/wooden-frame.png) center/contain no-repeat;
 }
 
 ion-menu::part(backdrop) {
@@ -56,7 +65,56 @@ ion-menu::part(container) {
 }
 
 .menu {
-  --background: url(../assets/images/menu.png) bottom/80% auto no-repeat;
+  --background: radial-gradient(circle at 50% 120%, #001700 30%, #059413 80%, #002309 100%);
+}
+
+ion-menu-button {
+  --background: url(../assets/images/wooden-square.png) center/cover no-repeat;
+}
+
+.main-bg {
+  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000501ae 100%),
+    url(../assets/images/layer-base.jpg) bottom/cover no-repeat;
+}
+
+.mistary-game-bg {
+  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000401e5 100%),
+    url(../assets/images/mistary-bg.webp) bottom/cover no-repeat;
+}
+
+@media screen and (min-width: 1220px) {
+  .mistary-game-bg {
+    --background: radial-gradient(circle at 50% 120%, #000000 30%, #ddff0000 80%, #000401e5 100%),
+      url(../assets/images/stage-b-bg.jpg) bottom/cover no-repeat;
+  }
+}
+
+.colors-game-bg {
+  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000401e5 100%),
+    url(../assets/images/treasure.jpg) bottom/cover no-repeat;
+}
+
+.letters-game-bg {
+  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000401e5 100%),
+    url(../assets/images/stage-b-letters.jpg) bottom/cover no-repeat;
+}
+
+button.custom-circle {
+  border-radius: 50%;
+  background: url(../assets/images/wooden-circle.png) center/cover no-repeat;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spin-active {
+  animation: spin 1s linear infinite;
 }
 
 ion-button.btn-gradient {
@@ -75,6 +133,23 @@ ion-button.btn-gradient {
   font-weight: 700;
 }
 
+ion-button.wooden-btn {
+  --background: url(../assets/images/wooden-frame.png) center/contain no-repeat;
+  --background-hover: none;
+  --background-activated: none;
+  --background-focused: none;
+  --color: #ffffff;
+  --box-shadow: 0 4px 6px rgb(0, 0, 0), 0 1px 3px rgba(0, 0, 0, 1);
+  --transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+}
+
+ion-button.wooden-btn:hover,
+ion-button.wooden-btn:focus,
+ion-button.wooden-btn:active {
+  --transform: translateY(2px);
+  --box-shadow: 0 2px 4px rgb(0, 0, 0), 0 1px 2px rgb(0, 0, 0);
+}
+
 ion-button.btn-transparent {
   --background: #22610000 !important;
 }
@@ -90,6 +165,10 @@ ion-button.btn-transparent {
   filter: blur(10px);
   z-index: -1;
   opacity: 0.7;
+}
+
+.bg-gradient-toolbar {
+  background-image: linear-gradient(90deg, #e16e09 10%, #ffa600 50%, #f08000 90%);
 }
 
 /* skeleton */
@@ -229,7 +308,7 @@ ion-skeleton-text {
 .custom-fab {
   position: fixed;
   bottom: 5%;
-  left: 45%;
+  left: 44%;
   transform: translateX(-45%);
   z-index: 999999;
 
@@ -254,7 +333,7 @@ ion-skeleton-text {
   width: 50px;
   height: 50px;
   box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15),
-    0 0 0 5px #ffffff;
+    0 0 0 5px #d56c2f;
   color: #011605;
 }
 
@@ -275,6 +354,42 @@ ion-skeleton-text {
 ion-tab-bar {
   overflow: visible !important;
   border: unset;
+}
+
+@media screen and (min-width: 480px) {
+  .custom-fab {
+    bottom: 4%;
+    left: 43%;
+  }
+
+  .custom-fab ion-fab-button::part(native) {
+    bottom: 4%;
+    left: 50%;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .custom-fab {
+    bottom: 4%;
+    left: 43%;
+  }
+
+  .custom-fab ion-fab-button::part(native) {
+    bottom: 4%;
+    left: 50%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .custom-fab {
+    bottom: 3%;
+    left: 48%;
+  }
+
+  .custom-fab ion-fab-button::part(native) {
+    bottom: 3%;
+    left: 50%;
+  }
 }
 
 .color-game-list {
