--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -558,6 +558,9 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
+.bottom-\[1\%\] {
+  bottom: 1%;
+}
 .left-1 {
   left: 0.25rem;
 }
@@ -569,6 +572,9 @@ video {
 }
 .left-\[65\%\] {
   left: 65%;
+}
+.right-\[1\%\] {
+  right: 1%;
 }
 .top-0 {
   top: 0px;
@@ -582,11 +588,38 @@ video {
 .top-\[60\%\] {
   top: 60%;
 }
+.bottom-\[10\%\] {
+  bottom: 10%;
+}
+.bottom-\[3\%\] {
+  bottom: 3%;
+}
+.right-\[3\%\] {
+  right: 3%;
+}
+.right-\[5\%\] {
+  right: 5%;
+}
+.bottom-\[5\%\] {
+  bottom: 5%;
+}
+.bottom-\[7\%\] {
+  bottom: 7%;
+}
+.bottom-\[8\%\] {
+  bottom: 8%;
+}
+.right-\[6\%\] {
+  right: 6%;
+}
 .z-10 {
   z-index: 10;
 }
 .z-20 {
   z-index: 20;
+}
+.z-0 {
+  z-index: 0;
 }
 .row-span-1 {
   grid-row: span 1 / span 1;
@@ -697,6 +730,12 @@ video {
 .h-screen {
   height: 100vh;
 }
+.h-24 {
+  height: 6rem;
+}
+.h-\[80\%\] {
+  height: 80%;
+}
 .max-h-screen {
   max-height: 100vh;
 }
@@ -705,6 +744,12 @@ video {
 }
 .min-h-screen {
   min-height: 100vh;
+}
+.min-h-\[400px\] {
+  min-height: 400px;
+}
+.min-h-\[60\%\] {
+  min-height: 60%;
 }
 .w-1 {
   width: 0.25rem;
@@ -760,6 +805,9 @@ video {
 .w-screen {
   width: 100vw;
 }
+.w-44 {
+  width: 11rem;
+}
 .max-w-\[800px\] {
   max-width: 800px;
 }
@@ -768,6 +816,9 @@ video {
 }
 .flex-1 {
   flex: 1 1 0%;
+}
+.flex-grow {
+  flex-grow: 1;
 }
 .-translate-x-1 {
   --tw-translate-x: -0.25rem;
@@ -884,6 +935,14 @@ video {
 }
 .p-6 {
   padding: 1.5rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 .text-center {
   text-align: center;
@@ -1021,12 +1080,48 @@ ion-toolbar {
 
 @media (min-width: 768px) {
 
+  .md\:bottom-\[3\%\] {
+    bottom: 3%;
+  }
+
+  .md\:bottom-\[4\%\] {
+    bottom: 4%;
+  }
+
+  .md\:bottom-\[5\%\] {
+    bottom: 5%;
+  }
+
+  .md\:bottom-\[6\%\] {
+    bottom: 6%;
+  }
+
   .md\:h-14 {
     height: 3.5rem;
   }
 
+  .md\:h-24 {
+    height: 6rem;
+  }
+
+  .md\:h-\[60\%\] {
+    height: 60%;
+  }
+
+  .md\:min-h-\[60\%\] {
+    min-height: 60%;
+  }
+
   .md\:w-14 {
     width: 3.5rem;
+  }
+
+  .md\:w-24 {
+    width: 6rem;
+  }
+
+  .md\:w-44 {
+    width: 11rem;
   }
 }
 
