refactor: Updated all project files to conform with new Prettier an ESLint settings
- Ran `prettier --write` and `eslint --fix` across all codebases to apply new formatting and linting rules.
- Updated `.prettierrc` and `.eslintrc.json` to reflect the latest configuration preferences, ensuring consistency across the project.
- Adjusted CI/CD scripts to enforce these new standards during build and deployment processes.

This commit ensures all project files align with updated code quality standards, enhancing readability and maintainability.

--- a/src/components/abc/AbcCube.css
+++ b/src/components/abc/AbcCube.css
@@ -16,7 +16,9 @@
   border: 1px solid rgba(48, 1, 1, 0.3);
   user-select: none;
   border-radius: 0.5rem;
-  box-shadow: inset 1px 1px 5px rgb(239, 206, 192), inset 1px 1px 5px rgb(188, 85, 1);
+  box-shadow:
+    inset 1px 1px 5px rgb(239, 206, 192),
+    inset 1px 1px 5px rgb(188, 85, 1);
 }
 
 .swiper-cube {
