--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,16 +1,17 @@
-.swiper.intro-swiper {
+.mySwiper.intro-swiper {
   position: relative;
   width: 100%;
   height: 25rem;
-  border-radius: 1.25rem;
+  border-radius: 1.25rem !important;
+  background-color: transparent;
 }
 
 @media screen and (min-width: 48rem) {
-  .swiper.intro-swiper {
+  .mySwiper.intro-swiper {
     width: 100%;
     max-width: 43.625rem;
     height: 50vh;
-    border-radius: 1.25rem;
+    border-radius: 1.25rem !important;
   }
 }
 
@@ -20,7 +21,7 @@
   background-size: cover;
   border: 1px solid rgba(255, 255, 255, 0.3);
   user-select: none;
-  border-radius: 1.25rem;
+  border-radius: 1.25rem !important;
 }
 
 .main-gradient-overlay {
@@ -77,8 +78,9 @@
   border-radius: 1.25rem;
 }
 
-.swiper.swiper-cube {
-  min-width: unset;
+.swiper.mySwiper.swiper-cube {
+  min-width: unset !important;
   overflow: hidden;
-  border-radius: 1.25rem;
+  border-radius: 1.25rem !important;
+  background-color: transparent;
 }
