--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -69,7 +69,12 @@ ion-menu::part(container) {
 }
 
 .menu {
-  --background: radial-gradient(circle at 50% 120%, #001700 30%, #059413 80%, #002309 100%);
+  --background: radial-gradient(
+    circle at 50% 120%,
+    #001700 30%,
+    #059413 80%,
+    #002309 100%
+  );
 }
 
 .toolbar-menu {
@@ -81,29 +86,54 @@ ion-menu-button {
 }
 
 .main-bg {
-  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000501ae 100%),
+  --background: radial-gradient(
+      circle at 50% 120%,
+      #000000 30%,
+      #05941300 80%,
+      #000501ae 100%
+    ),
     url(../assets/images/layer-base.jpg) bottom/cover no-repeat;
 }
 
 .mistary-game-bg {
-  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000401e5 100%),
+  --background: radial-gradient(
+      circle at 50% 120%,
+      #000000 30%,
+      #05941300 80%,
+      #000401e5 100%
+    ),
     url(../assets/images/mistary-bg.webp) bottom/cover no-repeat;
 }
 
 @media screen and (min-width: 76.25rem) {
   .mistary-game-bg {
-    --background: radial-gradient(circle at 50% 120%, #000000 30%, #ddff0000 80%, #000401e5 100%),
+    --background: radial-gradient(
+        circle at 50% 120%,
+        #000000 30%,
+        #ddff0000 80%,
+        #000401e5 100%
+      ),
       url(../assets/images/bg-forest-tonnel.webp) bottom/cover no-repeat;
   }
 }
 
 .colors-game-bg {
-  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000401e5 100%),
+  --background: radial-gradient(
+      circle at 50% 120%,
+      #000000 30%,
+      #05941300 80%,
+      #000401e5 100%
+    ),
     url(../assets/images/treasure.jpg) bottom/cover no-repeat;
 }
 
 .letters-game-bg {
-  --background: radial-gradient(circle at 50% 120%, #000000 30%, #05941300 80%, #000401e5 100%),
+  --background: radial-gradient(
+      circle at 50% 120%,
+      #000000 30%,
+      #05941300 80%,
+      #000401e5 100%
+    ),
     url(../assets/images/stage-b-letters.jpg) bottom/cover no-repeat;
 }
 
@@ -121,7 +151,8 @@ ion-button.wooden-btn {
   --background-activated: none;
   --background-focused: none;
   --color: #ffffff;
-  --box-shadow: 0 0.25rem 0.375rem rgb(0, 0, 0), 0 0.0625rem 0.1875rem rgba(0, 0, 0, 1);
+  --box-shadow: 0 0.25rem 0.375rem rgb(0, 0, 0),
+    0 0.0625rem 0.1875rem rgba(0, 0, 0, 1);
   --transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
 }
 
@@ -129,7 +160,8 @@ ion-button.wooden-btn:hover,
 ion-button.wooden-btn:focus,
 ion-button.wooden-btn:active {
   --transform: translateY(0.125rem);
-  --box-shadow: 0 0.125rem 0.25rem rgb(0, 0, 0), 0 0.0625rem 0.125rem rgb(0, 0, 0);
+  --box-shadow: 0 0.125rem 0.25rem rgb(0, 0, 0),
+    0 0.0625rem 0.125rem rgb(0, 0, 0);
 }
 
 ion-button.btn-transparent {
@@ -166,7 +198,12 @@ ion-button.btn-gradient {
   background-size: 400% 400%;
   animation: gradient 5s ease infinite;
   --background-hover: linear-gradient(-45deg, #226100, #eeff00, #226100);
-  --background-activated: linear-gradient(-45deg, rgb(15, 41, 1), #03f327, #226100);
+  --background-activated: linear-gradient(
+    -45deg,
+    rgb(15, 41, 1),
+    #03f327,
+    #226100
+  );
   --background-focused: var(--ion-color-primary);
   --color: #ffffff;
   --box-shadow: 0 0.125rem 0.375rem 0 #b7ff00;
@@ -188,7 +225,12 @@ ion-button.btn-gradient {
 }
 
 .bg-gradient-toolbar {
-  background-image: linear-gradient(90deg, #e16e09 10%, #ffa600 50%, #f08000 90%);
+  background-image: linear-gradient(
+    90deg,
+    #e16e09 10%,
+    #ffa600 50%,
+    #f08000 90%
+  );
 }
 
 /* skeleton */
@@ -215,31 +257,61 @@ ion-skeleton-text {
   height: 96px;
   margin: 0;
   border-radius: 50%;
-  box-shadow: 0rem 0.0625rem 0.125rem 0rem rgba(0, 0, 0, 0.3),
+  box-shadow:
+    0rem 0.0625rem 0.125rem 0rem rgba(0, 0, 0, 0.3),
     0rem 0.0625rem 0.1875rem 0.0625rem rgba(0, 0, 0, 0.15);
 }
 
 .ball-abc {
-  background: url(../assets/images/books/light-scroll.png) center/60% auto no-repeat,
-    radial-gradient(circle at 50% 120%, #81f683, #76ef82 10%, #059413 80%, #064516 100%);
+  background:
+    url(../assets/images/books/light-scroll.png) center/60% auto no-repeat,
+    radial-gradient(
+      circle at 50% 120%,
+      #81f683,
+      #76ef82 10%,
+      #059413 80%,
+      #064516 100%
+    );
   animation: abc-anim 5s linear infinite;
 }
 
 .ball-abc-game {
-  background: url(../assets/images/books/basic-scroll.png) center/80% auto no-repeat,
-    radial-gradient(circle at 50% 120%, #81f683, #76ef82 10%, #059413 80%, #064516 100%);
+  background:
+    url(../assets/images/books/basic-scroll.png) center/80% auto no-repeat,
+    radial-gradient(
+      circle at 50% 120%,
+      #81f683,
+      #76ef82 10%,
+      #059413 80%,
+      #064516 100%
+    );
   animation: abc-anim 5s linear infinite;
 }
 
 .ball-colors {
-  background: url(../assets/images/colors/bottles/navy-potion.png) center/80% auto no-repeat,
-    radial-gradient(circle at 50% 120%, #acf3f5, #b4edf3 10%, #71a8d9 80%, #061e45 100%);
+  background:
+    url(../assets/images/colors/bottles/navy-potion.png) center/80% auto
+      no-repeat,
+    radial-gradient(
+      circle at 50% 120%,
+      #acf3f5,
+      #b4edf3 10%,
+      #71a8d9 80%,
+      #061e45 100%
+    );
   animation: colors-anim 5s linear infinite;
 }
 
 .ball-colors-game {
-  background: url(../assets/images/colors/treasure-chest.png) center/80% auto no-repeat,
-    radial-gradient(circle at 50% 120%, #acf3f5, #b4edf3 10%, #71a8d9 80%, #061e45 100%);
+  background:
+    url(../assets/images/colors/treasure-chest.png) center/80% auto no-repeat,
+    radial-gradient(
+      circle at 50% 120%,
+      #acf3f5,
+      #b4edf3 10%,
+      #71a8d9 80%,
+      #061e45 100%
+    );
   animation: colors-anim 5s linear infinite;
 }
 
@@ -252,7 +324,11 @@ ion-skeleton-text {
   width: 90%;
   height: 90%;
   border-radius: 50%;
-  background: radial-gradient(circle at 50% 0rem, #ffffff, rgba(255, 255, 255, 0) 58%);
+  background: radial-gradient(
+    circle at 50% 0rem,
+    #ffffff,
+    rgba(255, 255, 255, 0) 58%
+  );
   filter: blur(0.3125rem);
 }
 
@@ -265,7 +341,11 @@ ion-skeleton-text {
   width: 90%;
   height: 40%;
   border-radius: 50%;
-  background: radial-gradient(circle at 50% 0rem, #ffffff, rgba(255, 255, 255, 0) 58%);
+  background: radial-gradient(
+    circle at 50% 0rem,
+    #ffffff,
+    rgba(255, 255, 255, 0) 58%
+  );
   filter: blur(0.3125rem);
 }
 
@@ -378,8 +458,10 @@ ion-skeleton-text {
   background-color: #379d04;
   width: 3.125rem;
   height: 3.125rem;
-  box-shadow: 0rem 0.0625rem 0.125rem 0rem rgba(0, 0, 0, 0.3),
-    0rem 0.0625rem 0.1875rem 0.0625rem rgba(0, 0, 0, 0.15), 0 0 0 0.3125rem #d56c2f;
+  box-shadow:
+    0rem 0.0625rem 0.125rem 0rem rgba(0, 0, 0, 0.3),
+    0rem 0.0625rem 0.1875rem 0.0625rem rgba(0, 0, 0, 0.15),
+    0 0 0 0.3125rem #d56c2f;
   color: #011605;
 }
 
@@ -447,4 +529,12 @@ ion-tab-bar {
   justify-content: center;
   gap: 1rem;
   margin-bottom: 1rem;
+}
+
+/* SWIPER */
+
+.swiper.mySwiper.swiper-cube {
+  min-width: unset !important;
+  overflow: hidden;
+  border-radius: 1.25rem;
 }
