--- a/src/theme/tailwind.css
+++ b/src/theme/tailwind.css
@@ -570,8 +570,8 @@ video {
 .bottom-0 {
   bottom: 0px;
 }
-.bottom-\[1\%\] {
-  bottom: 1%;
+.bottom-\[8\%\] {
+  bottom: 8%;
 }
 .left-1 {
   left: 0.25rem;
@@ -585,8 +585,8 @@ video {
 .left-\[65\%\] {
   left: 65%;
 }
-.right-\[1\%\] {
-  right: 1%;
+.right-\[6\%\] {
+  right: 6%;
 }
 .top-0 {
   top: 0px;
@@ -600,38 +600,14 @@ video {
 .top-\[60\%\] {
   top: 60%;
 }
-.bottom-\[10\%\] {
-  bottom: 10%;
-}
-.bottom-\[3\%\] {
-  bottom: 3%;
-}
-.right-\[3\%\] {
-  right: 3%;
-}
-.right-\[5\%\] {
-  right: 5%;
-}
-.bottom-\[5\%\] {
-  bottom: 5%;
-}
-.bottom-\[7\%\] {
-  bottom: 7%;
-}
-.bottom-\[8\%\] {
-  bottom: 8%;
-}
-.right-\[6\%\] {
-  right: 6%;
+.z-0 {
+  z-index: 0;
 }
 .z-10 {
   z-index: 10;
 }
 .z-20 {
   z-index: 20;
-}
-.z-0 {
-  z-index: 0;
 }
 .row-span-1 {
   grid-row: span 1 / span 1;
@@ -706,6 +682,9 @@ video {
 .h-20 {
   height: 5rem;
 }
+.h-24 {
+  height: 6rem;
+}
 .h-28 {
   height: 7rem;
 }
@@ -742,12 +721,6 @@ video {
 .h-screen {
   height: 100vh;
 }
-.h-24 {
-  height: 6rem;
-}
-.h-\[80\%\] {
-  height: 80%;
-}
 .max-h-screen {
   max-height: 100vh;
 }
@@ -756,12 +729,6 @@ video {
 }
 .min-h-screen {
   min-height: 100vh;
-}
-.min-h-\[400px\] {
-  min-height: 400px;
-}
-.min-h-\[60\%\] {
-  min-height: 60%;
 }
 .w-1 {
   width: 0.25rem;
@@ -799,6 +766,9 @@ video {
 .w-40 {
   width: 10rem;
 }
+.w-44 {
+  width: 11rem;
+}
 .w-6 {
   width: 1.5rem;
 }
@@ -816,9 +786,6 @@ video {
 }
 .w-screen {
   width: 100vw;
-}
-.w-44 {
-  width: 11rem;
 }
 .max-w-\[800px\] {
   max-width: 800px;
@@ -870,6 +837,12 @@ video {
 .auto-rows-max {
   grid-auto-rows: max-content;
 }
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -878,6 +851,9 @@ video {
 }
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
+}
+.grid-cols-8 {
+  grid-template-columns: repeat(8, minmax(0, 1fr));
 }
 .grid-rows-3 {
   grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -923,6 +899,9 @@ video {
 }
 .overflow-hidden {
   overflow: hidden;
+}
+.border-dashed {
+  border-style: dashed;
 }
 .bg-gradient-custom {
   background-image: linear-gradient(
@@ -970,6 +949,9 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.pl-2 {
+  padding-left: 0.5rem;
 }
 .text-center {
   text-align: center;
@@ -1151,28 +1133,12 @@ ion-toolbar {
 }
 
 @media (min-width: 768px) {
-  .md\:bottom-\[3\%\] {
-    bottom: 3%;
-  }
-
-  .md\:bottom-\[4\%\] {
-    bottom: 4%;
-  }
-
-  .md\:bottom-\[5\%\] {
-    bottom: 5%;
-  }
-
   .md\:bottom-\[6\%\] {
     bottom: 6%;
   }
 
   .md\:h-14 {
     height: 3.5rem;
-  }
-
-  .md\:h-24 {
-    height: 6rem;
   }
 
   .md\:h-\[60\%\] {
@@ -1187,10 +1153,6 @@ ion-toolbar {
     width: 3.5rem;
   }
 
-  .md\:w-24 {
-    width: 6rem;
-  }
-
   .md\:w-44 {
     width: 11rem;
   }
@@ -1199,5 +1161,9 @@ ion-toolbar {
 @media (min-width: 1024px) {
   .lg\:grid-cols-5 {
     grid-template-columns: repeat(5, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-8 {
+    grid-template-columns: repeat(8, minmax(0, 1fr));
   }
 }
